Fix Who we are avatar alignment

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -499,10 +499,24 @@ $animated-max-height: 50em;
 	}
 }
 
+.who-we-are__avatar {
+	position: relative;
+
+	height: 0;
+
+	padding-bottom: #{(100 / 125 * 100%)};
+
+	overflow: hidden;
+}
+
 .who-we-are img {
+	position: absolute;
+	top: $line-height * -2rem;
+
 	display: block;
 
 	width: 100%;
+	height: auto;
 
 	object-fit: cover;
 }
